@@ -1,11 +1,11 @@
 package com.deco2800.potatoes.util;
 
 import java.util.ArrayDeque;
-
+import java.util.ArrayList;
 
 
 /**
- * Class to encapsulate positions as Box3D objects in an entities path to target. Also
+ * Class to encapsulate calculatePositions as Box3D objects in an entities path to target. Also
  * holds the current angle the entity is traveling in.
  */
 public class Path {
@@ -16,13 +16,13 @@ public class Path {
      * Creates a new path, with no nodes.
      */
     public Path() {
-        this.nodes = new ArrayDeque<Box3D>();
+        this.nodes = new ArrayDeque<>();
         this.angle = 0;
     }
 
     /**
      * Creates a new path, with given nodes.
-     * @param nodes - List of positions in path to target.
+     * @param nodes - List of calculatePositions in path to target.
      */
     public Path(ArrayDeque<Box3D> nodes) {
         this.nodes = nodes;
@@ -39,7 +39,7 @@ public class Path {
 
     /**
      * Set a new deque of nodes
-     * @param nodes list of positions in path
+     * @param nodes list of calculatePositions in path
      */
     public void setNodes(ArrayDeque<Box3D> nodes) {
         this.nodes = nodes;
@@ -76,10 +76,10 @@ public class Path {
         // Check if the current position overlaps the first node in list
         if (currentPosition.overlaps(nodes.getFirst())) {
             // Remove first node from list as it's been reached
-            nodes.removeFirst();
+            nodes.remove(0);
             // Set angle to angle between _currentPosition_ and next node
             setAngle(currentPosition.angle(nodes.getFirst()));
-            // Calculate new x and y positions
+            // Calculate new x and y calculatePositions
             float newX = (float) (speed * Math.cos(getAngle()));
             float newY = (float) (speed * Math.sin(getAngle()));
             newPos.setX(newX);
@@ -89,7 +89,7 @@ public class Path {
         // Haven't reached the next node in list
         // Set angle to angle between _currentPosition_ and next node
         setAngle(currentPosition.angle(nodes.getFirst()));
-        // Calculate new x and y positions
+        // Calculate new x and y calculatePositions
         float newX = (float) (speed * Math.cos(getAngle()));
         float newY = (float) (speed * Math.sin(getAngle()));
         newPos.setX(newX);
